--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@
 # CUSTOMIZE
 # Name of your site (displayed in the header)
 # This should be your name or nickname.
-name: Your Name
+name: Kyla Yujiri
 
 # CUSTOMIZE
 # Short bio or description aout you (displayed in the header)
-description: CSCI-UA 480 Student, Spring 2020
+description: Kyla is a second year at NYU studying Computer Science in CAS.
 
 # CUSTOMIZE
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
@@ -28,9 +28,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: nyu-ossd-s20
-  instagram:
-  linkedin:
+  github: kylayujiri
+  instagram: kylayujiri
+  linkedin: kylayujiri
   pinterest:
   twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
@@ -43,14 +43,14 @@ footer-links:
 # It should be "/USER_NAME-weekly" in which USER_NAME is replaced by your actual
 # user name for GitHub.
 
-url: "https://nyu-ossd-s20.github.io/weekly"
+url: "https://nyu-ossd-s20.github.io/kylayujiri-weekly"
 
 # CUSTOMIZE
 # Replace this with the name of your own repository.
 # It should be "/USER_NAME-weekly" in which USER_NAME is replaced by your actual
 # user name for GitHub.
 
-baseurl: "/weekly"
+baseurl: "/kylayujiri-weekly"
 
 #
 # !! You don't need to change any of the configuration flags below !!
