--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Kyla Yujiri
 
 # CUSTOMIZE
 # Short bio or description aout you (displayed in the header)
-description: Kyla is a second year at NYU studying Computer Science in CAS.
+description: Computer Science | New York University Class of 2022
 
 # CUSTOMIZE
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
